# rapidjson_validator_test

./: CMakeLists.txt  buildMake.sh
cmake/: FindRapidJSON.cmake
data/: test_invalid_additional_property.json
data/conditional/: test_correct_first.json  test_correct_second.json  test_invalid_additional_first.json  test_invalid_first_prop.json  test_invalid_first_type.json  test_invalid_nonexistent_prop.json
data/ref/: test_correct.json  test_invalid_missing_property.json  test_invalid_type.json
schemas/: base_schema.json  child_schema.json  conditional_schema.json  first_schema.json  second_schema.json
src/: CMakeLists.txt  RemoteSchemaProvider.cpp  main.cpp
